# latency-progression

./: CMakeLists.txt  README.md
benchmarks/: latency_bench.cpp
include/: data_oriented.hpp  metal.hpp  naive.hpp  simd_vectorized.hpp  static_resolution_branch_hints.hpp
